--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ Deny from all
 </Files>
 
 ErrorDocument 404 /error
-RewriteRule ^dich-vu/$ dich-vu.php [L]
+RewriteRule ^dich-vu$ dich-vu.php [L]
 RewriteRule ^error$ 404.php [L]
 RewriteRule ^home$ index.php [L]
 RewriteRule ^gioi-thieu$ gioi-thieu.php [L]
